--- a/style.css
+++ b/style.css
@@ -7,5 +7,8 @@ body {
     object-fit: contain;
     width: auto;
     height: 100%;
-    transform: translateY(-1rem);
+    position: absolute;
+    top: 0rem;
+    left: 0rem;
+
 }
