--- a/styles/Global.css
+++ b/styles/Global.css
@@ -13,6 +13,9 @@
     font-family: 'Roboto', sans-serif;
     height: 100vh;
     background: url(../imgs/bgHomePage.png) #000;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size:cover;
     user-select: none;
     color: #fff;
     overflow: hidden;
