--- a/styles/HomePage.css
+++ b/styles/HomePage.css
@@ -16,3 +16,10 @@
     bottom: 0rem;
     right: 0rem;
 }
+
+.LaserTagTextTop {
+    position: absolute;
+    top: 1vh;
+    left: 7.5vw;
+    filter: drop-shadow(0 0 0.75rem crimson);
+}
