--- a/styles/HomePage.css
+++ b/styles/HomePage.css
@@ -21,5 +21,5 @@
     position: absolute;
     top: 1vh;
     left: 7.5vw;
-    filter: drop-shadow(0 0 0.75rem crimson);
+    filter: drop-shadow(0px 30px 27px #c90000);
 }
