--- a/styles/HomePage.css
+++ b/styles/HomePage.css
@@ -23,3 +23,14 @@
     left: 7.5vw;
     filter: drop-shadow(0px 30px 27px #c90000);
 }
+
+.DotDiv {
+    position: absolute;
+    top: 7vh;
+    margin-left: 5vw;
+    animation: floatAround 4s infinite ease-in-out;
+}
+
+@keyframes floatAround {
+    50%  { transform: translate(10px, 0); }     /* right */
+}
