--- a/styles/HomePage.css
+++ b/styles/HomePage.css
@@ -15,6 +15,8 @@
     position: absolute;
     bottom: 0rem;
     right: 0rem;
+    filter: drop-shadow(50px 9mm 18mm #39222b);
+    animation: shadowPulse 4s infinite ease-in-out;
 }
 
 .LaserTagTextTop {
@@ -32,5 +34,11 @@
 }
 
 @keyframes floatAround {
-    50%  { transform: translate(10px, 0); }     /* right */
+    50%  { transform: translate(10px, 0); }    
+}
+
+@keyframes shadowPulse {
+    0%   { filter: drop-shadow(50px 9mm 18mm #39222b); }
+    50%  { filter: drop-shadow(30px 11mm 20mm #39222b); }
+    100% { filter: drop-shadow(50px 9mm 18mm #39222b); }
 }
