--- a/styles/HomePage.css
+++ b/styles/HomePage.css
@@ -44,6 +44,24 @@
 }
 
 .BttomDiVDetail {
-    position: relative;
-}
-
+    position: relative; /* container for absolute children */
+  }
+  
+  .BttomDiVDetail svg {
+    display: block;       
+    position: relative;   
+    z-index: 1;           
+  }
+  
+  .TextDetailBottomDiv {
+    position: absolute;
+    top: 0;              
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;           
+    display: flex;       
+    align-items: center;
+    justify-content: center;
+    color: white;        
+  }
