--- a/styles/HomePage.css
+++ b/styles/HomePage.css
@@ -104,9 +104,9 @@
   .bg-image {
     width: 100%;
     height: 100%;
-    display: block;           /* removes inline gap */
+    display: block;          
     position: relative;
-    z-index: 1;               /* background layer */
+    z-index: 1;              
   }
   
   .kossher {
@@ -115,8 +115,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 2;               /* text above image */
-    display: flex;            /* centers text */
+    z-index: 2;              
+    display: flex;          
     align-items: center;
     justify-content: center;
     color: white;
