--- a/styles/HomePage.css
+++ b/styles/HomePage.css
@@ -137,3 +137,19 @@
     max-width: 85%;
     transform: translateX(5px);
   }
+
+  .priceCreate {
+    position: absolute;
+    top: 10rem;
+    right: 0;
+    z-index: 2;              
+    display: flex;          
+    align-items: center;
+    justify-content: center;
+    color: white;
+    flex-direction: column;
+    text-align: center;
+    padding-top: 20px;
+    padding-left: 30px;
+    gap: 4px;
+  }
