--- a/styles/HomePage.css
+++ b/styles/HomePage.css
@@ -176,3 +176,25 @@
     font-size: 12px;
     font-weight: 400;
   }
+
+  .CreateLobbyButton {
+    position: absolute;
+    bottom: -20rem;
+    right: 1.3rem;
+    z-index: 2;              
+    display: flex;          
+    align-items: center;
+    justify-content: center;
+    color: white;
+    flex-direction: column;
+    text-align: center;
+    padding-top: 20px;
+    padding-left: 30px;
+    gap: 4px;
+  }
+
+  .CreateLobbyButton h2 {
+    position: absolute;
+    font-size: 17px;
+    color: #D2162D;
+  }
