--- a/styles/HomePage.css
+++ b/styles/HomePage.css
@@ -100,6 +100,12 @@
 .CreateLobby {
     position: relative;     
     cursor: pointer;  
+    transition: transform 0.3s ease; 
+    overflow: hidden;
+  }
+
+  .CreateLobby:hover {
+    transform: scale(1.01);
   }
   
   .bg-image {
@@ -153,6 +159,7 @@
     padding-top: 20px;
     padding-left: 30px;
     gap: 4px;
+    transition: transform 0.3s ease; 
   }
 
   .TextPriceForCreate {
@@ -179,7 +186,7 @@
 
   .CreateLobbyButton {
     position: absolute;
-    bottom: -20rem;
+    bottom: 2rem;
     right: 1.3rem;
     z-index: 2;              
     display: flex;          
@@ -191,6 +198,8 @@
     padding-top: 20px;
     padding-left: 30px;
     gap: 4px;
+    transition: transform 0.3s ease; 
+
   }
 
   .CreateLobbyButton h2 {
@@ -198,4 +207,12 @@
     font-size: 17px;
     color: #D2162D;
     transform: rotate(-2.31deg) translateY(-1.5px);
+
+  }
+
+  .CreateLobby:hover  .CreateLobbyButton {
+    transform: rotate(-2deg);
+  }
+  .CreateLobby:hover .priceCreate {
+    transform: translateX(5px);
   }
