--- a/styles/HomePage.css
+++ b/styles/HomePage.css
@@ -216,3 +216,88 @@
   .CreateLobby:hover .priceCreate {
     transform: translateX(5px);
   }
+
+
+
+
+
+
+
+
+
+
+  
+.JoinLobby {
+    position: relative;     
+    cursor: pointer;  
+    transition: transform 0.3s ease; 
+    overflow: hidden;
+  }
+
+  .JoinLobby:hover {
+    transform: scale(1.01);
+  }
+  
+  .bg-image {
+    width: 100%;
+    height: 100%;
+    display: block;          
+    position: relative;
+    z-index: 1;              
+  }
+  
+  .JoinLobyText {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;              
+    display: flex;          
+    align-items: left;
+    justify-content: start;
+    color: white;
+    flex-direction: column;
+    text-align: left;
+    padding-top: 20px;
+    padding-left: 30px;
+    gap: 4px;
+  }
+
+  .JoinLobyText h1 {
+    font-weight: 900;
+    font-size: 46px;
+  }
+
+  .JoinLobbyButton {
+    position: absolute;
+    bottom: 2rem;
+    right: 1.3rem;
+    z-index: 2;              
+    display: flex;          
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    flex-direction: column;
+    text-align: center;
+    padding-top: 20px;
+    padding-left: 30px;
+    gap: 4px;
+    transition: transform 0.3s ease; 
+
+  }
+
+  .JoinLobbyButton h2 {
+    position: absolute;
+    font-size: 17px;
+    color: #fff;
+    transform: rotate(-2.31deg) translateY(-1.5px);
+
+  }
+
+  .JoinLobby:hover  .JoinLobbyButton {
+    transform: rotate(-2deg);
+  }
+  .JoinLobby:hover .priceJoin {
+    transform: translateX(5px);
+  }
