--- a/styles/HomePage.css
+++ b/styles/HomePage.css
@@ -313,7 +313,6 @@ backdrop-filter: blur(20px);
     font-size: 17px;
     color: #fff;
     transform: rotate(-2.31deg) translateY(-1.5px);
-
   }
 
   .JoinLobby:hover  .JoinLobbyButton {
@@ -338,7 +337,14 @@ box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 backdrop-filter: blur(20px);
 -webkit-backdrop-filter: blur(20px);
     border-radius: 6px;
+  transition: transform 0.3s ease; 
+  cursor: pointer;
 }
+
+.LeaderBoardPageDiv:hover {
+  transform: scale(1.01);
+}
+
 
 .LeaderBoardBg {
     position: absolute;
@@ -351,18 +357,21 @@ backdrop-filter: blur(20px);
 }
 
 .LeaderBoardText {
-    position: relative;
+    position: absolute;
+    top: 30px;
+    left: 30px;
     z-index: 1; /* ensures text is above */
     color: white; /* visible over image */
+    text-align: left;
 }
 
 .LeaderBoardText h1 {
-    font-size: 2.5rem;
+    font-size: 20px;
     font-weight: bold;
     margin: 0 0 10px 0;
 }
 
 .LeaderBoardText p {
-    font-size: 1.2rem;
-    opacity: 0.9; /* slightly softer */
+    font-size: 13px;
+    opacity: 0.9; /
 }
