--- a/styles/HomePage.css
+++ b/styles/HomePage.css
@@ -489,8 +489,8 @@ transform: scale(1.01);
 
 .GreenWinDiv {
   position: absolute;
-  transform: translateY(-1.5px) translateX(4.27rem);
-  width: 100px;  
+  transform: translateY(-1px) translateX(4.27rem);
+  width: 95px;  
   height: 40px;
   display: flex;
   justify-content: center;
@@ -515,9 +515,9 @@ transform: scale(1.01);
   color: white; 
   font-weight: bold;
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 14px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 5px;
 }
 
@@ -537,8 +537,8 @@ transform: scale(1.01);
   color: white; 
   font-weight: bold;
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 14px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 5px;
 }
