--- a/styles/HomePage.css
+++ b/styles/HomePage.css
@@ -388,7 +388,6 @@ backdrop-filter: blur(20px);
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
   text-align: center; 
   background: rgba(0, 0, 0, 0.45);
 border-radius: 16px;
@@ -517,7 +516,7 @@ transform: scale(1.01);
   display: flex;
   flex-direction: row;
   gap: 5px;
-  transform: translateY(-2px) translateX(-1px);
+  transform: translateY(-1px) translateX(-1px);
 
 }
 
@@ -564,4 +563,15 @@ transform: scale(1.01);
   display: flex;
   flex-direction: row;
   gap: 5px;
+}
+
+.RedLineShadow {
+  background: #FF1A1A;
+  background: linear-gradient(270deg,rgba(255, 26, 26, 0) 0%, rgba(255, 26, 26, 1) 50%, rgba(255, 26, 26, 0) 100%);
+  width: 100%;
+  height: 2px;
+  position: absolute;
+  bottom: 0px;
+  -webkit-box-shadow: 0px 0px 50px 5px rgba(255,26,26,0.6); 
+  box-shadow: 0px 0px 50px 5px rgba(255,26,26,0.6);
 }
