--- a/styles/HomePage.css
+++ b/styles/HomePage.css
@@ -1,3 +1,18 @@
+.HomePage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Roboto', sans-serif;
+  height: 100vh;
+  width: 100vw;
+  background: url(../imgs/bgHomePage.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size:cover;
+  user-select: none;
+  color: #fff;
+  overflow: hidden;
+}
 
 .LeftVector {
     object-fit: contain;
