--- a/styles/HomePage.css
+++ b/styles/HomePage.css
@@ -5,7 +5,7 @@
   font-family: 'Roboto', sans-serif;
   height: 100vh;
   width: 100vw;
-  background: url(../imgs/bgHomePage.png);
+  background: url(../imgs/bgHomePage.png),#000;
   background-repeat: no-repeat;
   background-position: center;
   background-size:cover;
