--- a/styles/SettingLobby.css
+++ b/styles/SettingLobby.css
@@ -1,15 +1,21 @@
 .SettingLobby {
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
     font-family: 'Roboto', sans-serif;
     height: 100vh;
     width: 100vw;
-    background: url(../imgs/bgHomePage.png),#000;
+    background: url(../imgs/SettingRoompageBg.png),#000;
     background-repeat: no-repeat;
     background-position: center;
     background-size:cover;
     user-select: none;
     color: #fff;
     overflow: hidden;
+}
+
+.CharachterCenter {
+    position: absolute;
+    bottom: 0rem;
+    width: 77rem;
 }
