--- a/styles/HomePage.css
+++ b/styles/HomePage.css
@@ -1,5 +1,5 @@
 .HomePage {
-  display: none;
+  display: flex;
   justify-content: center;
   align-items: center;
   font-family: 'Roboto', sans-serif;
