--- a/styles/SettingLobby.css
+++ b/styles/SettingLobby.css
@@ -89,8 +89,10 @@
   position: absolute;
   right: 6rem;
 }
+
 .TopTextMapSelector {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
