--- a/styles/SettingLobby.css
+++ b/styles/SettingLobby.css
@@ -97,7 +97,37 @@
 }
 
 
-.MapSelectDiv img{
+.MapSelectDiv {
+  position: relative;   /* makes it a stacking container */
   width: 27rem;
   height: 6.7rem;
+}
+
+.MapSelectDiv img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+.MapImage {
+  z-index: 0; /* bottom layer */
+}
+
+.UpperMapImage {
+  z-index: 1; /* middle layer */
+}
+
+.MapDetail {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); /* center it */
+  z-index: 2; /* top layer */
+  color: white;
+  font-weight: bold;
+  font-size: 1.2rem;
 }
