--- a/styles/SettingLobby.css
+++ b/styles/SettingLobby.css
@@ -145,10 +145,14 @@
 }
 
 .MapDetail h1 {
-  font-size: 21px;
+  font-size: 20px;
 }
 
 .MapDetail p {
-  font-size: 12px;
+  font-size: 11px;
   font-weight: 300;
+}
+
+.GreenSelectMap {
+  
 }
