--- a/styles/SettingLobby.css
+++ b/styles/SettingLobby.css
@@ -164,7 +164,7 @@
 .RedSelectMap {
   opacity: 0;
   transform: translateX(20px);
-  pointer-events: none;   /* hidden bars won’t block clicks */
+  pointer-events: none;  
   transition: opacity 0.5s ease, transform 0.4s ease;
   height: 6.4rem;
   width: 6px;
@@ -174,7 +174,6 @@
   border-top-right-radius: 100%;
 }
 
-/* Active state → fades/slides in */
 .GreenSelectMap.active,
 .RedSelectMap.active {
   opacity: 1;
@@ -182,7 +181,6 @@
   pointer-events: auto;
 }
 
-/* Green styles */
 .GreenSelectMap {
   background-color: #00FF77;
   -webkit-box-shadow: -28px 0px 50px 23px rgba(0,255,119,0.52); 
@@ -190,9 +188,16 @@
   right: .5px;
 }
 
-/* Red styles */
 .RedSelectMap {
   background-color: #F1224C;
   -webkit-box-shadow: -28px 0px 50px 23px rgba(255, 0, 0, 0.52); 
   box-shadow: -28px 0px 50px 23px rgba(255, 0, 0, 0.52);
+}
+
+.CreateLobbyNewDiv {
+  background: #ff1a1a26;
+  position: absolute;
+  right: 6rem;
+  bottom: 4rem;
+  padding: 20px 70px;
 }
