--- a/styles/SettingLobby.css
+++ b/styles/SettingLobby.css
@@ -205,12 +205,33 @@
 
 .InsideCreateLobbyNew {
   background: #FF1A1A;
+  position: relative;
   background: linear-gradient(100deg,rgba(255, 26, 26, 1) 50%, rgba(153, 16, 16, 1) 100%);
   padding: 13px 55px;
+  display: flex;
+  justify-content: center;
 }
 
 .InsideCreateLobbyNew p {
   font-family: "Inter", sans-serif;
   font-family: 900;
   font-size: 14px;
+}
+
+.WhitlineTop {
+  width: 90px;
+  height: 2px;
+  background: #ffffff;
+  background: linear-gradient(270deg,rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.812) 50%, rgba(255, 255, 255, 0) 100%);
+  position: absolute;
+  top: 0;
+}
+
+.WhitlineBottom {
+  width: 90px;
+  height: 1.9px;
+  background: #ffffff;
+  background: linear-gradient(270deg,rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.812) 50%, rgba(255, 255, 255, 0) 100%);
+  position: absolute;
+  bottom: 0;
 }
