--- a/styles/SettingLobby.css
+++ b/styles/SettingLobby.css
@@ -278,12 +278,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 17px 20px;
   color: #fff;
-  min-width: 320px;
+  height: 55px;
+  width: 390px;
   background: url("../imgs/InputBgDiv.png") no-repeat center;
   background-size: cover;
   transition: transform 0.2s ease;
+  font-family: "Roboto", sans-serif;
 }
 
 .input-container.active {
@@ -297,14 +298,30 @@
   outline: none;
   font-size: 16px;
   color: #fff;
+  font-weight: 900;
+  transform: translateX(1.4rem);
 }
 
 .input-container span {
-  margin-left: 16px;
-  font-size: 16px;
-  color: #fff;
+  transform: translateX(-5rem);
+  font-size: 12px;
+  color: #ffffffe0;
 }
 
 .LineLittWhite {
-  
+  width: 100%;
+  bottom: 0;
+  height: 1px;
+  background-color: #ffffff42;
+  position: absolute;
+}
+
+.WhitlineBottomInput {
+  width: 90px;
+  height: 2px;
+  background: linear-gradient(270deg,rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.812) 50%, rgba(255, 255, 255, 0) 100%);
+  position: absolute;
+  bottom: 0;
+  transition: transform 0.4s ease; 
+  left: 1rem;
 }
