--- a/styles/SettingLobby.css
+++ b/styles/SettingLobby.css
@@ -322,7 +322,8 @@
   width: 100%;
   bottom: 0;
   height: 1px;
-  background-color: #ffffff42;
+  background: #a4a4a4;
+  background: linear-gradient(270deg,rgba(255, 255, 255, 0) 0%, rgb(125, 125, 125) 50%, rgb(125, 125, 125) 100%);
   position: absolute;
 }
 
