--- a/styles/SettingLobby.css
+++ b/styles/SettingLobby.css
@@ -313,9 +313,13 @@
 }
 
 .input-container span {
-  transform: translateX(-5rem);
+  transform: translateX(-6.5rem);
   font-size: 12px;
   color: #ffffffe0;
+}
+
+.ChangePOTI {
+  transform: translateX(-3rem) !important;
 }
 
 .LineLittWhite {
